[package]
name = "split-pcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
bytes = "1.2.1"
etherparse = "0.12.0"
mqttbytes = "0.6.0"
pcap = "0.11.0"
pcap-file = "1.1.1"
